<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/processButton"
        android:layout_width="284dp"
        android:layout_height="32dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="61dp"
        android:layout_marginTop="496dp"
        android:background="@color/colorAnswer"
        android:fontFamily="sans-serif-medium"
        android:text="@string/processButton"
        android:textAllCaps="false"
        android:textSize="@dimen/answerSize" />

    <NumberPicker
        android:id="@+id/newNum1"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="323dp"
        android:layout_marginTop="319dp"
        android:background="@color/colorNumPicker"
        android:descendantFocusability="blocksDescendants"
        android:solidColor="@color/colorAccent">

    </NumberPicker>

    <NumberPicker
        android:id="@+id/newNum2"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="223dp"
        android:layout_marginTop="319dp"
        android:background="@color/colorNumPicker"
        android:descendantFocusability="blocksDescendants"
        android:solidColor="@color/colorAccent">

    </NumberPicker>

    <NumberPicker
        android:id="@+id/newNum3"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="125dp"
        android:layout_marginTop="319dp"
        android:background="@color/colorNumPicker"
        android:descendantFocusability="blocksDescendants"
        android:solidColor="@color/colorAccent">

    </NumberPicker>

    <NumberPicker
        android:id="@+id/newNum4"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="319dp"
        android:background="@color/colorNumPicker"
        android:descendantFocusability="blocksDescendants"
        android:solidColor="@color/colorAccent">

    </NumberPicker>

    <NumberPicker
        android:id="@+id/randNumPicker1"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="323dp"
        android:layout_marginTop="189dp"
        android:background="@color/colorNumPicker"
        android:descendantFocusability="blocksDescendants"
        android:solidColor="@color/colorAccent">

    </NumberPicker>

    <NumberPicker
        android:id="@+id/randNumPicker2"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="223dp"
        android:layout_marginTop="189dp"
        android:background="@color/colorNumPicker"
        android:descendantFocusability="blocksDescendants"
        android:solidColor="@color/colorAccent">

    </NumberPicker>

    <NumberPicker
        android:id="@+id/randNumPicker3"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="125dp"
        android:layout_marginTop="189dp"
        android:background="@color/colorNumPicker"
        android:descendantFocusability="blocksDescendants"
        android:solidColor="@color/colorAccent">

    </NumberPicker>

    <NumberPicker
        android:id="@+id/randNumPicker4"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="189dp"
        android:background="@color/colorNumPicker"
        android:descendantFocusability="blocksDescendants"
        android:solidColor="@color/colorAccent">

    </NumberPicker>

    <NumberPicker
        android:id="@+id/numPicker1"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="323dp"
        android:layout_marginTop="41dp"
        android:background="@color/colorNumPicker"
        android:solidColor="@color/colorAccent">

    </NumberPicker>

    <NumberPicker
        android:id="@+id/numPicker2"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="223dp"
        android:layout_marginTop="41dp"
        android:background="@color/colorNumPicker"
        android:solidColor="@color/colorAccent">

    </NumberPicker>

    <NumberPicker
        android:id="@+id/numPicker3"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="125dp"
        android:layout_marginTop="41dp"
        android:background="@color/colorNumPicker"
        android:solidColor="@color/colorAccent">

    </NumberPicker>

    <NumberPicker
        android:id="@+id/numPicker4"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="41dp"
        android:background="@color/colorNumPicker"
        android:solidColor="@color/colorAccent">

        <!-- android:visibility="invisible" Add this if you want the numpicker to be invisible -->

    </NumberPicker>

    <Button
        android:id="@+id/randomButton"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="94dp"
        android:layout_marginTop="139dp"
        android:background="@color/colorAnswer"
        android:fontFamily="sans-serif-medium"
        android:text="@string/randomButton"
        android:textAllCaps="false"
        android:textSize="@dimen/answerSize" />

    <Button
        android:id="@+id/newNumButton"
        android:layout_width="wrap_content"
        android:layout_height="33dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="84dp"
        android:layout_marginTop="274dp"
        android:background="@color/colorAnswer"
        android:fontFamily="sans-serif-medium"
        android:text="@string/newNumButton"
        android:textAllCaps="false"
        android:textSize="@dimen/answerSize" />

    <TextView
        android:id="@+id/enterNumLabel"
        android:layout_width="254dp"
        android:layout_height="26dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="96dp"
        android:layout_marginTop="9dp"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:text="@string/instruct"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/answerSize" />

    <TextView
        android:id="@+id/enterNumLabel2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="9dp"
        android:layout_marginTop="441dp"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:text="@string/instruct2"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/answerSize" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="49dp"
        android:layout_marginTop="404dp"
        android:orientation='horizontal'>
        >

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:text="                   " />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:text="                   " />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:text="                   " />

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center" />
    </RadioGroup>

</RelativeLayout>